# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: page-analyzer-check.yml
page_analyzer/: __init__.py  app.py  database.py  html.py  utils.py
page_analyzer/templates/: head.html  header.html  index.html  one_url.html  urls.html
